# experiments

./: LICENSE
apache-mod/: .gitignore  Makefile  README  index.html  mod_ace.cc  mod_ace.cpp  mod_example.cc  niid-h3-neut.ace
build-with-meson/: meson.build  mk
build-with-meson/cc/core/: main.cc  virus-name.cc
build-with-meson/cc/ext/: fmt.hh  lexy.hh  pybind11.hh  range-v3.hh
build-with-meson/subprojects/: .gitignore  fmt.wrap  pybind11.wrap  range-v3.wrap  xlnt.wrap
build-with-meson/subprojects/packagefiles/fmt-8/: meson.build
build-with-meson/subprojects/packagefiles/pybind11/: meson.build
build-with-meson/subprojects/packagefiles/range-v3/: meson.build
build-with-meson/subprojects/packagefiles/simdjson/: meson.build
build-with-meson/subprojects/packagefiles/xlnt-1.5/: meson.build
delegate/: Makefile  delegate.cc
delegate/delegate.dSYM/Contents/: Info.plist
gm/: README.org  client_secret.json  qs.py  r1.py  r2.py  storage.json
marina.skepner.eu/: README  index.html  main.css  main.html  main.js  put  resolutions.txt
move-vs-forward/: move-vs-forward.cc
rcpp-1/: README
rcpp-1/acmacs-r/: DESCRIPTION  Makefile  README  README.md
rcpp-1/acmacs-r/man/: acmacs-package.Rd  acmacs.Antigen.Rd  acmacs.Chart.Rd  acmacs.Serum.Rd  acmacs.r-package.Rd
rcpp-1/acmacs-r/src/: Makevars  acmacs.cpp
rcpp-1/acmacs-r/tests/: testthat.R
rcpp-1/eu1/: .gitignore  DESCRIPTION  Makefile  NAMESPACE
rcpp-1/eu1/..Rcheck/: 00install.out
rcpp-1/eu1/R/: RcppExports.R
rcpp-1/eu1/man/: eu1-package.Rd
rcpp-1/eu1/src/: Makevars  RcppExports.cpp  rcpp.hh  rcpp_hello_world.cpp  symbols.rds
rcpp-1/eu2/: DESCRIPTION  Makefile  NAMESPACE
rcpp-1/eu2/R/: RcppExports.R  zzz.R
rcpp-1/eu2/man/: eu2-package.Rd
rcpp-1/eu2/src/: RcppExports.cpp  rcpp_module.cpp
rcpp-1/eu3/: DESCRIPTION  Makefile  NAMESPACE  cleanup  install-shared-libs.Darwin
rcpp-1/eu3/man/: eu3-package.Rd
rcpp-1/eu3/src/: .#Makevars  Makevars  acmacs-color.cc
